--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  cupertino_icons: ^0.1.2
+  http: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
