--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -29,6 +29,7 @@ dev_dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
   http: any
+  charts_flutter: ^0.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
