--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -30,6 +30,13 @@ dev_dependencies:
   cupertino_icons: ^0.1.2
   http: any
   charts_flutter: ^0.8.0
+  flutter_sparkline: "^0.1.0"
+  flutter_staggered_grid_view: "^0.3.0"
+  flutter_circular_chart: ^0.1.0
+  font_awesome_flutter: ^8.2.0
+  fl_chart: ^0.4.1
+  bezier_chart: "^1.0.15"
+  flarts: ^0.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
