--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -30,6 +30,8 @@ dev_dependencies:
   cupertino_icons: ^0.1.2
   http: any
   charts_flutter: ^0.8.0
+  flutter_staggered_grid_view: "^0.3.0"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
